# TitanVideo

./: CMakeLists.txt  COPYRIGHT.md  FiberOpticThreading_Concept.md  LICENSE  LIFETIME_SUBSCRIBER_README.md  README.md  SIMOD.cpp  SUBSCRIPTION_PLANS.md  TitanVideo.py  TitanVideo.spec  Tvid.cpp  UI_Interface.html  Untitled-1  build_installer.bat  build_installer.sh  build_lifetime.sh  build_lifetime_installer.bat  build_lifetime_installer.sh  create_owner_license.py  generate_qr.py  license_manager.py  lifetime_config.ini  pricing.html  requirements.txt  setup.py  test_build.sh  test_license.py
.github/workflows/: build.yml
lifetime_build/: TitanVideo_Lifetime.spec  license_manager.py
lifetime_build/AppDir/: AppRun  LICENSE  TitanVideo_Lifetime.desktop  UI_Interface.html
lifetime_build/lifetime_env/: pyvenv.cfg
titanvideo_env/: pyvenv.cfg
